# botversion-cli

botversion-sdk/: client.js  index.js  interceptor.js  package-lock.json  package.json  scanner.js
botversion-sdk-php/: BotVersion.php  Client.php  Interceptor.php  Scanner.php  composer.json
botversion-sdk-php/cli/: Detector.php  Generator.php  Prompts.php  Writer.php
botversion-sdk-python/: __init__.py  client.py  interceptor.py  pyproject.toml  scanner.py  setup.py
botversion-sdk-python/botversion-sdk/: __init__.py  interceptor.py  setup.py
botversion-sdk-python/botversion-sdk/cli/: detector.py  generator.py  init.py  prompts.py  writer.py
botversion-sdk-python/botversion_sdk/: __init__.py  client.py  interceptor.py  scanner.py  setup.py
botversion-sdk-python/botversion_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
botversion-sdk-python/botversion_sdk/botversion_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
botversion-sdk-python/botversion_sdk/cli/: detector.py  generator.py  init.py  prompts.py  writer.py
botversion-sdk-python/cli/: detector.py  prompts.py  writer.py
botversion-sdk/cli/: detector.js  generator.js  prompts.js  writer.js
